deploy/deployment.yaml
# # web-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     test: service
#   name: hostname-server
# spec:
#   selector:
#     matchLabels:
#       test: service
#   minReadySeconds: 60
#   replicas: 3
#   template:
#     metadata:
#       labels:
#         test: service
#     spec:
#       containers:
#         - image: k8s.gcr.io/serve_hostname:v1.4
#           name: hostname-server
#           ports:
#             - containerPort: 9376
#               protocol: TCP
#       terminationGracePeriodSeconds: 90

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  labels:
    test: service
spec:
  selector:
    matchLabels:
      test: service
  template:
    metadata:
      labels:
      test: service
    spec:
      containers:
        - name: frontend
          image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.6
          ports:
            - containerPort: 8080
