deploy/cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip
  annotations:
    configmanagement.gke.io/cluster-selector: cluster-east
spec:
  type: ClusterIP
  selector:
    serviceType: Clusterip
    test: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
