deploy/loadbalancer_external.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-external
  annotations:
    configmanagement.gke.io/cluster-selector: cluster-east
spec:
  type: LoadBalancer
  selector:
    #serviceType: LoadBalancer-External
    test: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-external-name
spec:
  type: ExternalName
  externalName: lbexternal.com
