deploy/loadbalancer_internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-internal
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    configmanagement.gke.io/cluster-selector: cluster-east
spec:
  type: LoadBalancer
  selector:
    #serviceType: LoadBalancer-Internal
    test: service
  ports:
    - port: 80
      targetPort: 9376
      protocol: TCP
