deploy/node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port
  annotations:
    configmanagement.gke.io/cluster-selector: cluster-east
spec:
  type: NodePort
  selector:
    test: service
    serviceType: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
