deploy/api_gateway_internal.yaml
# web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-internal
spec:
  ports:
    - name: host1
      port: 80
      protocol: TCP
      targetPort: 9376
  selector:
    #type: Ingress-Internal
    test: service
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: api-gw-internal-gateway
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            gateway: api-gw-internal-gateway
---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: api-gw-internal-httproute
  labels:
    gateway: api-gw-internal-gateway
spec:
  #  hostnames:
  #    - "store.example.com"
  rules:
    - forwardTo:
        - serviceName: api-gateway-internal
          port: 80
