deploy/ingress_external.yaml
# web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-external
spec:
  ports:
    - name: host1
      port: 80
      protocol: TCP
      targetPort: 9376
  selector:
    #type: Ingress-external
    test: service
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external
spec:
  defaultBackend:
    service:
      name: ingress-external
      port:
        number: 80
